--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,5 +13,26 @@ jobs:
       uses: actions/checkout@v3
     - name: Show current version of Xcode
       run: xcodebuild -version
-    - name: Build
-      run: xcodebuild -project Planz.xcodeproj -scheme Planz -destination 'platform=iOS Simulator,name=iPhone 8,OS=latest'
+    - name: Build and Test
+      run: xcodebuild test -project Planz.xcodeproj -scheme Planz -destination 'platform=iOS Simulator,name=iPhone 8,OS=latest'
+    - name: Test Success
+      uses: rjstone/discord-webhook-notify@v1
+      if: success()
+      with:
+        severity: info
+        details: Test Succeeded!
+        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+    - name: Test Failure
+      uses: rjstone/discord-webhook-notify@v1
+      if: failure()
+      with:
+        severity: error
+        details: Test Failed!
+        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
+    - name: Test Cancelled
+      uses: rjstone/discord-webhook-notify@v1
+      if: cancelled()
+      with:
+        severity: warn
+        details: Test Cancelled!
+        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
