--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -15,3 +15,10 @@ jobs:
       run: xcodebuild -version
     - name: Build and Test
       run: xcodebuild test -project Planz.xcodeproj -scheme Planz -destination 'platform=iOS Simulator,name=iPhone 8,OS=latest'
+    - name: Test Failure
+      uses: rjstone/discord-webhook-notify@v1
+      if: failure()
+      with:
+        severity: error
+        details: Test Failed!
+        webhookUrl: ${{ secrets.DISCORD_WEBHOOK }}
