--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -11,3 +11,9 @@ disabled_rules: # Default Rules에서 비활성화할 규칙
     
     # 다중 클로저 구문을 사용할 때 후행 클로저 구문은 사용할 수 없습니다. https://realm.github.io/SwiftLint/trailing_closure.html
     - multiple_closures_with_trailing_closure
+
+    # https://realm.github.io/SwiftLint/cyclomatic_complexity.html
+    - cyclomatic_complexity
+    
+    # https://realm.github.io/SwiftLint/function_body_length.html
+    - function_body_length
