--- a/Planz/Info.plist
+++ b/Planz/Info.plist
@@ -9,5 +9,14 @@
 		<key>UISceneConfigurations</key>
 		<dict/>
 	</dict>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>launchScreenColor</string>
+		<key>UIImageName</key>
+		<string>launchScreenLogo</string>
+		<key>UILaunchScreen</key>
+		<dict/>
+	</dict>
 </dict>
 </plist>
